<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/hatter"
    tools:context=".Bejelentkezes_ketto">

    <EditText
        android:id="@+id/Felhasznalo1_masodikmodszer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/be_email"
        android:minHeight="48dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="345dp" />

    <EditText
        android:id="@+id/Jelszo1_masodikmodszer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Felhasznalo1_masodikmodszer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/be_jelszo"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="453dp" />

    <Button
        android:id="@+id/Bejelentkezesgomb1_masodikmodszer"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_below="@+id/Jelszo1_masodikmodszer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="#778899"
        android:text="@string/be_jelenkezes"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="653dp" />

    <Button
        android:id="@+id/Regisztraciogomb1_masodikmodszer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/Bejelentkezesgomb1_masodikmodszer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"

        android:layout_marginEnd="10dp"
        android:backgroundTint="#778899"
        android:text="@string/be_reg"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="733dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nyelv" />


</RelativeLayout>