<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/hatter"
android:padding="10dp"
    android:id="@+id/drawer_layout"
tools:context=".FOoldal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="404dp"
            android:layout_height="182dp"
            android:layout_marginTop="30dp"
            android:contentDescription="Fotokony kep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/fd689068c7c51e4999c7a210ba6070eb" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="403dp"
            android:layout_height="219dp"
            android:layout_marginTop="50dp"
            android:contentDescription="Kep szerkesztes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:srcCompat="@drawable/crop1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kezd_oldal"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="404dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:backgroundTint="#778899"
            android:text="@string/fot_k_nyvk_sz_t_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="404dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:backgroundTint="#778899"
            android:text="@string/fot_k_nyv_gener_l_sa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/header_menu"
        app:menu="@menu/main_menu"
        android:fitsSystemWindows="true"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>
